GNOME Bugzilla – Bug 609350
Mutter does not support the COGL_DEBUG environment variable
Last modified: 2010-02-12 11:43:43 UTC
Cogl has some handy debugging features that are separate from Clutter's. Mutter calls clutter_get_option_group_without_init which only returns the options from Clutter so the COGL_DEBUG environment variable doesn't work.
Created attachment 153280 [details] [review] Add the group from cogl_get_option_group() to the GOptionContext Otherwise it's not possible to use the COGL_DEBUG environment variable.
Review of attachment 153280 [details] [review]: Looks fine, if pretty bizarre that the workingness of the environment variable is a side-effect of parsing the command line option group... :-)
Committed as bd90fd7033b9af6d25fbc4fcd64f3ec1a5843c56.