Add the group from cogl_get_option_group() to the GOptionContext

Otherwise it's not possible to use the COGL_DEBUG environment variable.

https://bugzilla.gnome.org/show_bug.cgi?id=609350