src/core/main.c
@@ -341,6 +341,7 @@ meta_parse_options (int *argc, char ***argv,
   ctx = g_option_context_new (NULL);
   g_option_context_add_main_entries (ctx, options, "mutter");
   g_option_context_add_group (ctx, clutter_get_option_group_without_init ());
+  g_option_context_add_group (ctx, cogl_get_option_group ());
 
   if (!g_option_context_parse (ctx, argc, argv, &error))
     {
